--- a/Pages/Admin/movies.html
+++ b/Pages/Admin/movies.html
@@ -119,7 +119,7 @@
         </div>
 
         <div class="profile">
-          <button class="button" id="create-btn" onclick="openModal()">
+          <button class="button" id="create-btn">
             <span class="button-span">Create</span>
           </button>
           <img
@@ -134,62 +134,28 @@
         <table>
           <thead>
             <tr>
-              <th class="th-border">ID</th>
+              <th>ID</th>
               <th></th>
               <th>Title</th>
               <th>Overview</th>
               <th>Category</th>
               <th>IMDB</th>
               <th>Edit</th>
-              <th class="th-border2">Remove</th>
+              <th>Remove</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
-              <td>1</td>
-              <td>
-                <img
-                  src="../../Assets/icons/movie/movie-icon.svg"
-                  style="width: 29px; height: 39px"
-                  alt="Movie Poster"
-                /><br />
-              </td>
-              <td>Lost in Space</td>
-              <td>Lorem ipsum test...</td>
-              <td>Action</td>
-              <td>7.6</td>
-              <td>
-                <img
-                  src="../../Assets/icons/categories/edit-icon.png"
-                  alt="zoom-icon"
-                  style="width: 18px; height: 18px"
-                  class="img-icon"
-                  onclick=""
-                />
-              </td>
-              <td>
-                <img
-                  src="../../Assets/icons/categories/remove-icon.png"
-                  alt="remove-icon"
-                  class="img-icon img-icon1"
-                  style="width: 18px; height: 18px"
-                  id="create-btn2"
-                  onclick="openRemoveModal()"
-                />
-              </td>
-            </tr>
-          </tbody>
+          <tbody></tbody>
         </table>
+        <div class="pagination-container"></div>
       </div>
     </div>
 
-    <!-- modal -->
+    <!-- modal 1 -->
+
     <div class="modal-remove" id="modal-remove" style="display: none">
       <div class="modal-content-2">
         <div class="comment-wrapper2">
-          <p id="modalComment-2">
-            Are you sure you want to remove this comment?
-          </p>
+          <p id="modalComment-2">Are you sure you want to remove this row?</p>
         </div>
         <div class="modal-buttons">
           <button id="yes-btn" class="modal-btn">Yes</button>
@@ -200,7 +166,7 @@
       </div>
     </div>
 
-    <!-- modal -->
+    <!-- modal 2 -->
 
     <div class="modal" id="modal" style="display: none">
       <div class="modal-content">
@@ -227,24 +193,44 @@
                 <input type="text" id="watch-url" placeholder="watch url" />
               </div>
               <div class="form-group">
-                <input type="text" id="imdb" placeholder="imdb" />
+                <input type="text" id="imdb" placeholder="imdb" maxlength="3" />
               </div>
               <div class="form-group">
-                <input type="text" id="runtime" placeholder="run time minute" />
+                <input
+                  type="text"
+                  id="runtime"
+                  placeholder="run time minute"
+                  maxlength="4"
+                />
               </div>
               <div class="form-group">
-                <select id="category" class="form-control custom-select">
-                  <option value="">category</option>
-                  <option value="Action">Action</option>
-                  <option value="Drama">Drama</option>
-                </select>
+                <div class="dropdown">
+                  <div class="dropdown-togglee">
+                    actors <span id="actors-span"></span>
+                  </div>
+                  <div class="dropdown-items" id="dropdown-items">
+                    <div class="dropdown-item" data-value="Leonardo">
+                      Leonardo
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="category-dropdown">
+                  <div class="category-toggle">
+                    category <span id="category-span"></span>
+                  </div>
+                  <div class="category-items" id="category-items"></div>
+                </div>
               </div>
               <div class="form-group horizontal-group">
                 <div class="checkbox-group">
                   <label for="adult" class="adult">Adult</label>
                   <input type="checkbox" id="adult" />
                 </div>
-                <button type="submit" class="submit-btn">Submit</button>
+                <button type="submit" class="submit-btn" id="submit-btn">
+                  Submit
+                </button>
               </div>
             </form>
           </div>
@@ -255,6 +241,15 @@
         </div>
       </div>
     </div>
+
+    <!-- ------------------------------------------------------>
+    <!-- test  -->
+
+    <div class="popup" id="popup">
+      <p id="pop-p">Bu bir popup mesajıdır!</p>
+      <button class="close-btn" onclick="closePopup()">Close</button>
+    </div>
+
     <script src="../../Scripts/Admin/movies.js"></script>
   </body>
 </html>
